# arb-stats

./: .eslintrc.cjs  Cargo.toml  Dockerfile  package.json  wrangler.toml
.github/workflows/: audit.yml  test.yml
api/: package.json  wrangler.toml
api/src/: batch.ts  bots.ts  events.ts  index.ts  info.ts  types.d.ts  util.ts
app/: .eslintrc.cjs  package.json  server.js  tailwind.config.ts  tsconfig.json  vite.config.ts  wrangler.toml
app/app/: botDatafeed.ts  config.ts  root.tsx
app/app/api/: index.ts  openapi.d.ts  openapi.json
app/app/components/: chart.tsx  cumulativeChart.tsx  dailyChart.tsx  index.ts  marketShareChart.tsx
app/app/hooks/: index.ts  useBots.ts
app/app/routes/: _index.tsx
app/app/types/: chart.ts
crates/indexer/: Cargo.toml
crates/indexer/src/: event.rs  indexer.rs  main.rs  send.rs
