[package]
name = "indexer"
version = "0.0.1"
authors = ["Mario Reder <mario.reder@pm.me>"]
edition = "2021"

[dependencies]
anyhow = "1"
async-stream = "0.3"
dotenv = "0.15"
futures-util = "0.3"
itertools = "0.13"
near-jsonrpc-client = "0.10"
near-primitives = "0.22"
near-token = "0.2"
rayon = "1"
regex = "1"
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"
