[package]
name = "indexer"
version = "0.0.1"
authors = ["Mario Reder <mario.reder@pm.me>"]
edition = "2024"

[dependencies]
anyhow = "1"
async-stream = "0.3"
dotenv = "0.15"
futures-util = "0.3"
itertools = "0.14"
near-jsonrpc-client = "0.17"
near-primitives = "0.30"
near-token = "0.3"
rayon = "1"
regex = "1"
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"
tryhard = "0.5"
